# dbt_linreg

./: .dbtignore  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  dbt_project.yml  index.html  pyproject.toml  run  scripts.py  sitemap.xml
.github/workflows/: docs.yml  tests.yml
css/: extra.css
docs/: mkdocs.yml  requirements.txt
docs/src/: index.md
integration_tests/: dbt_project.yml  selectors.yml
integration_tests/models/: chol_decomp_v2.sql  collinear_matrix_1var_without_const.sql  collinear_matrix_1var_without_const_ridge.sql  collinear_matrix_2var_without_const.sql  collinear_matrix_3var_without_const.sql  collinear_matrix_4var_without_const.sql  collinear_matrix_5var_without_const.sql  collinear_matrix_5var_without_const_ridge.sql  collinear_matrix_regression.sql  collinear_matrix_regression_chol.sql  collinear_matrix_regression_chol_unoptimized.sql  collinear_matrix_regression_fwl.sql  collinear_matrix_ridge_regression.sql  collinear_matrix_ridge_regression_chol.sql  collinear_matrix_ridge_regression_chol_unoptimized.sql  collinear_matrix_ridge_regression_fwl.sql  collinear_matrix_weights_chol.sql  collinear_matrix_weights_fwl.sql  collinear_matrix_weights_ridge_chol.sql  collinear_matrix_weights_ridge_fwl.sql  groups_matrix_regression.sql  groups_matrix_regression_chol.sql  groups_matrix_regression_chol_optimized.sql  groups_matrix_regression_chol_unoptimized.sql  groups_matrix_regression_fwl.sql  long_format_options.sql  perfectly_multicollinear_model.sql  simple_0var_regression_long_chol.sql  simple_0var_regression_long_fwl.sql  simple_0var_regression_wide.sql  simple_10var_regression_long.sql  simple_1var_regression_long.sql  simple_1var_regression_long_chol.sql  simple_1var_regression_long_fwl.sql  simple_1var_regression_wide.sql  simple_2var_regression_long.sql  simple_2var_regression_wide.sql  simple_3var_regression_long.sql  simple_3var_regression_wide.sql  simple_4var_regression_long.sql  (+5 more)
integration_tests/profiles/: profiles.yml
integration_tests/seeds/: collinear_matrix.csv  groups_matrix.csv  simple_matrix.csv
integration_tests/tests/: test_collinear_matrix_1var_without_const.sql  (+42 more)
macros/: schema.yml
(+7 files in other folders)
