[project]
name = "dbt_linreg"
requires-python = "~=3.11"
description = "dbt_pca dbt package"
version = "0.3.0"
readme = "README.md"
authors = ["Daniel Reeves"]

[dependency-groups]
dbt = [
    "dbt-clickhouse",
    "dbt-core<1.9.0",
    "dbt-duckdb",
    "dbt-postgres",
]
python-dev = [
    "duckdb>=1.1.3",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "pyyaml>=6.0.2",
    "rich-click>=1.8.5",
    "ruff>=0.8.4",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = true
