[project]
name = "dbt_linreg"
requires-python = "~=3.11"
description = "dbt_linreg dbt package"
version = "0.3.1"
readme = "README.md"
authors = ["Daniel Reeves"]

[project.optional-dependencies]
python-dev = [
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "pyyaml>=6.0.2",
    "rich-click>=1.8.5",
    "ruff>=0.8.4",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
]
clickhouse = [
    "dbt-core<1.9.0",
    "dbt-clickhouse",
]
duckdb = [
    "dbt-core<1.9.0",
    "dbt-duckdb",
    "duckdb>=1.1.3",
]
postgres = [
    "dbt-core<1.9.0",
    "dbt-postgres",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = true
